*zVirtualScenes ver 1.5.4108.26182 - 4-01-11*
  * Changed Lat/Long to Decimal notation
  * Settings are in a seperate form
  * Prompted to save all settings on exit
  * Export Settings option
  * GUI tweaks
  * device count added to zwave devices / scene tab
  * HTTP interface code rebuild
  * Proper shutdown of threads on exit
  * Control think stick repolling and reloading collision detection  
  * Delete key detection for scenes and actions
  * Tabindex and focus optimized on all popup forms prompts 
  * ctrl-s Save

*zVirtualScenes ver 1.5.4100.35835 - 3-24-11*
  * LightSwitch - sort devices a-z option added
  * Allow multiple item selection on Actions (mass edit, delete, rearrange)
  * Allow multiple device selections and bulk action creation (drag and drop)
  * Added per Action checkbox to allow Action to be skipped based on time of day (light out or dark out). 
  * Optimazations for larger ZWave networks.
  * Zeroconf Support. You will need http://support.apple.com/downloads/DL999/en_US/BonjourPSSetup.exe to utilize this. 

*zVirtualScenes ver 1.5.4095.40726 - 3-19-11*
  * Repoller Tweaks
  * Bug fixed that prevented devices from loading if a sensor was present.  THANKS TO PAUL C.
  * Added Group / Zone support.  Now you can run actions on groups / zones.
  * Added Group / Zone support to LightSwitch.
  * Added Group / Zone support to XMLSocket. {{{ <activategroup group="Living Room" level="40" /> }}} - Activate a Group / Zone.  Zones can only control, Binary and Multilevel Switches.
  * Added XML Socket Command {{{ <alterlevel node="3" changelevel="-5" /> }}} -  MULTILEVEL SWITCH ONLY. Alters the level of a multilevel switch from its current state.  + and - accepted. 

*ver 1.5.4093.20328 - 3-17-11*
  * Changed HTTP ListScenes to output XML
  * Device updates sent to LightSwitch socket clients.
  * Greater Log Detail
  * Faster Loading Time
  * Removed iViewer support for lightswitch socket server
  * Added new XML sockets protocol.