@@ -1,3 +1,7 @@
+*zVirtualScenes ver 1.5.x- 4-18-11*
+  * Expanded BinarySwitch Device Compatability. 
+
+
 *zVirtualScenes ver 1.5.4108.26182 - 4-01-11*
   * Changed Lat/Long to Decimal notation
   * Settings are in a seperate form
